--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="item"> item 3</div>
       </div>
 
-      <div class="pagination">
+      <div class="controls">
         <div class="first">&#171;</div>
         <div class="prev">&lt;</div>
         <div class="numbers">
